# openblack

./: .clang-format-ignore  .licenserc.json  CMakeLists.txt
.github/workflows/: ci-cross-compile.yml  packaging.yml
apps/anmtool/: CMakeLists.txt
apps/glwtool/: CMakeLists.txt
apps/l3dtool/: CMakeLists.txt  l3dtool.cpp
apps/lndtool/: CMakeLists.txt  lndtool.cpp
apps/packtool/: CMakeLists.txt  packtool.cpp
assets/shaders/: vs_object_instanced.sc  vs_tree.sc
components/anm/: CMakeLists.txt
components/glw/: CMakeLists.txt
components/l3d/: CMakeLists.txt
components/lnd/: CMakeLists.txt
components/pack/: CMakeLists.txt
src/: AllMeshes.h  CMakeLists.txt  Console.cpp  CreatureBody.cpp  Game.cpp  Game.h  GameWindow.cpp  Gui.cpp  Gui.h  Level.cpp  Level.h  LevelLocator.cpp  LevelLocator.h  MeshViewer.cpp  MeshViewer.h  Profiler.h  Renderer.cpp  Renderer.h  TempleStructure.cpp  TempleStructure.h  main.cpp
src/3D/: Camera.cpp  Camera.h  CameraPath.cpp  CameraPath.h  Glow.h  L3DMesh.cpp  L3DMesh.h  L3DModel.cpp  L3DSubMesh.cpp  LandBlock.cpp  LandBlock.h  LandIsland.cpp  LandIsland.h  MeshLocator.cpp  MeshLocator.h  MeshLookup.h  MeshPack.cpp  MeshPack.h  SkinnedModel.cpp  SkinnedModel.h  Sky.cpp
src/Common/: FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  MemoryStats.cpp  MemoryStats.h  MemoryStream.cpp  StringUtilities.h
src/Debug/: Gui.h
src/Dynamics/: DynamicsSystem.cpp  DynamicsSystem.h  LandBlockBulletMeshInterface.h
src/Entities/: EntityBuilder.cpp  EntityBuilder.h  EntityId.h  EntityManager.cpp  EntityManager.h  Registry.cpp  (+2 more)
(+51 files in other folders)
